@@ -1,0 +1,2 @@
+XML_HTMLSax and XML_HTMLSax3 are dual licensed under the PHP license 3.0
+and the LGPL 3.0. You are free to take your pick.
